<resources>
    <string name="app_name">Cryptocurrencies</string>
    <string name="title">BTC</string>
    <string name="subtitle">Bitcoin</string>
    <string name="price">9999999$</string>
    <string name="by_price">By market cap price</string>
    <string name="by_volume_price">By volume price</string>
    <string name="cancel">Cancel</string>
    <string name="ok">Ok</string>
    <string name="sort">Sort</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="popup_menu_download_photo">Download photo</string>
    <string name="popup_menu_take_a_picture">Take a picture</string>
    <string name="popup_menu_pick_from_gallery">Pick from gallery</string>
    <string name="settings">Settings</string>
    <string name="crypto_name">Bitcoin</string>
    <string name="back">Back</string>
    <string name="tab_main">Main</string>
    <string name="tab_settings">Settings</string>
    <string name="permission_write_never_askagain">Please, add permission in application`s settings</string>
    <string name="take_a_photo">Take a photo</string>
    <string name="take_photo_from_camera">Camera</string>
    <string name="take_photo_from_files">Files</string>
    <string name="media_data_picker_enter_date">Enter date</string>
    <string name="media_data_picker_date_of_birth">DATE OF BIRTH</string>
    <string name="point_24H">24H</string>
    <string name="point_1W">1W</string>
    <string name="point_1M">1M</string>
    <string name="point_1Y">1Y</string>
    <string name="point_ALL">1Y</string>
    <string name="point_chart_24H">24h</string>
    <string name="point_chart_7d">7d</string>
    <string name="point_chart_30d">30d</string>
    <string name="point_chart_200d">200d</string>
    <string name="point_chart_ALL">All</string>
    <string name="point_1day">1</string>
    <string name="point_7days">7</string>
    <string name="point_30days">30</string>
    <string name="point_365days">365</string>
    <string name="point_max">max</string>
    <string name="market_cap">Market cap</string>
    <string name="market_cap_price">$999.99B</string>
    <string name="market_cap_price_percent">+999.99 %</string>
    <string name="cryptocurrencies_title">Cryptocurrencies</string>
    <string name="details_title">Crypto name</string>
    <string name="settings_title">Settings</string>
</resources>