<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:titleTextColor="@color/white"
        android:background="@color/UFO_green"
        app:layout_constraintTop_toTopOf="parent" />

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:backgroundTint="@color/white"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/priceText"
        style="@style/CryptoActivityTitlePrice"
        android:transitionName="priceText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:gravity="center"
        app:layout_collapseMode="parallax"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintStart_toEndOf="parent"/>

    <TextView
        android:id="@+id/marketPricePercentage"
        style="@style/CryptoActivityMarketPricePercent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/priceText" />

    <TextView
        android:id="@+id/highPrice"
        style="@style/CryptoActivityStartEndPrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:layout_marginTop="20dp"
        android:layout_marginRight="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/priceText" />



    <com.github.mikephil.charting.charts.LineChart
        android:id="@+id/livechart"
        android:layout_width="match_parent"
        android:layout_height="132dp"
        android:layout_marginTop="40dp"
        app:layout_constraintBottom_toBottomOf="@+id/lowPrice"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/priceText" />

    <TextView
        android:id="@+id/lowPrice"
        style="@style/CryptoActivityStartEndPrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:layout_marginTop="112dp"
        android:layout_marginLeft="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/highPrice" />

    <LinearLayout
        android:id="@+id/LRTimeForChoice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lowPrice"
        android:dividerPadding="20dp"
        android:showDividers="middle">

        <TextView
            android:id="@+id/day1"
            android:layout_width="45dp"
            android:layout_height="27dp"
            android:layout_marginRight="31dp"
            android:text="@string/point_24H"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="@color/white"
            android:background="@drawable/background_time_chart"
            style="@style/CryptoActivityPointsTime"/>
        <!-- TODO !REFACTORING! Change to layout_marginStart -->
        <TextView
            android:id="@+id/days7"
            android:layout_width="45dp"
            android:layout_height="27dp"
            android:layout_marginRight="31dp"
            android:text="@string/point_1W"
            android:layout_weight="1"
            android:gravity="center"
            style="@style/CryptoActivityPointsTime" />

        <TextView
            android:id="@+id/days30"
            android:layout_width="45dp"
            android:layout_height="27dp"
            android:layout_marginRight="31dp"
            android:text="@string/point_1M"
            android:layout_weight="1"
            android:gravity="center"
            style="@style/CryptoActivityPointsTime"/>

        <TextView
            android:id="@+id/days365"
            android:layout_width="45dp"
            android:layout_height="27dp"
            android:layout_marginRight="31dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/point_1Y"
            style="@style/CryptoActivityPointsTime"/>

        <TextView
            android:id="@+id/all"
            android:layout_width="45dp"
            android:layout_height="27dp"
            android:text="@string/point_ALL"
            android:layout_weight="1"
            android:gravity="center"
            style="@style/CryptoActivityPointsTime"/>
    </LinearLayout>

    <View
        android:id="@+id/lineView"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="24dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LRTimeForChoice"
        android:background="@color/silver_sand" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lineView">

        <TextView
            style="@style/CryptoActivityMarketCap"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="left"
            android:text="@string/market_cap" />

        <TextView
            android:id="@+id/marketCap"
            style="@style/CryptoActivityMarketPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"/>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>