<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:titleTextColor="@color/white"
        android:background="@color/UFO_green"
        app:layout_constraintTop_toTopOf="parent" />

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="@dimen/layout_75dp"
        android:layout_height="@dimen/layout_75dp"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:backgroundTint="@color/white"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintSettings"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:padding="@dimen/layout_16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <ImageView
            android:id="@+id/imageProfile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/profile_icon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <FrameLayout
            android:id="@+id/personRelativeLayout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/layout_66dp"
            android:layout_gravity="center_horizontal"
            app:layout_constraintBottom_toBottomOf="@+id/imageProfile"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <View
                android:id="@+id/addPhoto"
                android:layout_width="match_parent"
                android:layout_height="@dimen/layout_66dp"
                android:layout_gravity="bottom|center"
                android:background="@color/gray_background_color" />

            <ImageView
                android:id="@+id/iconPhoto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/photo_profile_icon" />
        </FrameLayout>

        <EditText
            android:id="@+id/FirstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/layout_24dp"
            android:background="@drawable/frame_for_frofile_data"
            android:gravity="center_vertical"
            android:hint="@string/first_name"
            android:maxLength="20"
            android:minHeight="@dimen/layout_56dp"
            android:minLines="1"
            android:padding="@dimen/layout_16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/personRelativeLayout" />


        <EditText
            android:id="@+id/LastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/layout_24dp"
            android:background="@drawable/frame_for_frofile_data"
            android:gravity="center_vertical"
            android:hint="@string/last_name"
            android:minHeight="@dimen/layout_56dp"
            android:padding="@dimen/layout_16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/FirstName" />


        <EditText
            android:id="@+id/birthDay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/layout_24dp"
            android:background="@drawable/frame_for_frofile_data"
            android:focusable="false"
            android:gravity="center_vertical"
            android:hint="@string/date_of_birth"
            android:minHeight="@dimen/layout_56dp"
            android:padding="@dimen/layout_16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/LastName" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>